fixed word wrap

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -368,6 +368,8 @@ header {
 
         span.text {
           display: block;
+          width: 90px;
+          margin-top: 3px;
         }
 
         &:hover {
